# ELFIO

./: .clang-format  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ELFIO.sln  INSTALL  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  configure  configure.ac  configure.in  index.html  prepare_cygwin.sh  test-driver
.github/workflows/: c-cpp.yml  codeql-analysis.yml
ELFIO/: Makefile.am  configure.in
ELFIO/ELFIOTest/: ELFIOTest.vcxproj  ELFIOTest.vcxproj.filters
ELFIO/autom4te.cache/: output.0
ELFIO/cygwin/CYGWIN-PATCHES/: ELFIO-1.0.0.README
ELFIO/doc/: Makefile.am  Makefile.in
ELFIO/elf_examples/: elf_dummy_header_i386_32.elf  elf_dummy_header_ppc_32.elf  elf_dummy_header_ppc_64.elf  hello_32_copy  write_exe_i386_32
ELFIO/elfio/: elf_types.hpp  elfio.hpp  elfio_note.hpp  elfio_segment.hpp  elfio_strings.hpp  elfo_dynamic.hpp
ELFIO/examples/ELFDump/: ELFDump.vcxproj
ELFIO/examples/WriteObj2/: WriteObj2.cpp
ELFIO/examples/Writer/: Write.cpp
ELFIO/examples/tutorial/: Makefile.am  Makefile.in
ELFIOTest/: ELFIOTest.cpp  ELFIOTest.vcxproj  ELFIOTest.vcxproj.filters  ELFIOTest1.cpp  Makefile  Makefile.am  Makefile.in  configure  configure.ac
ario/: ario.hpp
autom4te.cache/: requests  traces.0  traces.1
cygwin/: ELFIO-1.0.0-1.sh  ELFIO-1.0.0-2.sh  ELFIO-1.0.2-1.sh  elfio.cygport
cygwin/CYGWIN-PATCHES/: ELFIO-1.0.0.README  setup.hint
debian/: README.Debian  changelog  control  copyright  elfio-docs.docs  elfio.cron.d.ex  elfio.doc-base.EX  elfio.install  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch  watch.ex
doc/: Makefile.am  Makefile.in  Test.docx  build.sh  elfio.docbook  elfio.docx  elfio.html  elfio_converted_pdf.docx  elfio_data_members_table.docbook  elfio_members_table.docbook  section_members_table.docbook  tclap -- Templatized C++ Command Line Parser Library.htm  tutorial.docbook  tutorial.html
doc/site/: elfio.htm  index.htm  style.css
doc/site/oldsite/: c18.htm  c66.htm  x35.htm
elf_examples/: asm.s  asm64.lst  asm64_copy  asm_copy  asm_copy.readelf  elf_dummy_header_i386_32.elf  elf_dummy_header_i386_64.elf  elf_dummy_header_ppc_32.elf  elf_dummy_header_ppc_64.elf  hello.c  hello_32.txt  hello_32_copy  hello_32_o.txt  hello_64.txt  hello_64_copy  hello_64_o.txt  ls.readelf  ls_copy.readelf  read_write_arm_elf32_output  test_ppc.cpp  test_ppc.txt  test_ppc_copy  test_ppc_o.txt  write_exe_i386_32_match  write_exe_i386_32_work  write_exe_i386_32_work_dump.txt
elfio/: elf_types.hpp  elfi_dynamic.hpp  elfio.hpp  elfio_array.hpp  elfio_dump.hpp  elfio_dump_test.cpp  elfio_dynamic.hpp  elfio_header.hpp  elfio_modinfo.hpp  elfio_note.hpp  elfio_range.hpp  elfio_relocation.hpp  elfio_section.hpp  elfio_segment.hpp  elfio_strings.hpp  elfio_symbols.hpp  elfio_utils.hpp  elfio_version.hpp  elfio_versym.hpp  elfo_dynamic.hpp
examples/: CMakeLists.txt  Makefile.am  Makefile.in
examples/ELFDump/: ELFDump.cpp  Makefile.am
examples/RelocationTable/: RelocationTable.cpp
examples/WriteObj/: WriteObj.cpp
examples/Writer/: Write.cpp
examples/add_section/: CMakeLists.txt  Makefile.am  Makefile.in  add_section.cpp
examples/anonymizer/: CMakeLists.txt  Makefile.am  Makefile.in  anonymizer.cpp
examples/archive_dump/: CMakeLists.txt  archive_dump.cpp
examples/arion/: arion.cpp
examples/arioso/: arioso.cpp
examples/c_interop/: CMakeLists.txt  Makefile.am  Makefile.in  c_example.c  elfio_c_interop.cpp  elfio_c_interop.h
examples/c_wrapper/: CMakeLists.txt  Makefile.am  Makefile.in  c_example.c  elfio_c_wrapper.cpp  elfio_c_wrapper.h
examples/elfdump/: CMakeLists.txt  ELFDump.vcxproj  Makefile.am  Makefile.in  elfdump.cpp
examples/proc_mem/: proc_mem.cpp  sudo_gdb.sh
examples/tutorial/: CMakeLists.txt  Makefile.am  Makefile.in  tutorial.cpp
examples/write_obj/: CMakeLists.txt  Makefile.am  Makefile.in  write_obj.cpp
examples/writer/: CMakeLists.txt  Makefile.am  Makefile.in  writer.cpp  writer.vcxproj  writer.vcxproj.filters
tests/: ARIOTest.cpp  CMakeLists.txt  ELFIOTest.cpp  ELFIOTest.vcxproj  ELFIOTest.vcxproj.filters  ELFIOTest1.cpp  ELFIOTest2.cpp  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  elfio_fuzzer.cpp
tests/elf_examples/: test_ppc.cpp
web/htdocs/: c63.htm  f14.htm  index.htm  x45.htm  x57.htm
