AC_INIT([ELFIO],m4_bregexp(m4_quote(m4_include([elfio/elfio_version.hpp])), [[0-9]+\.[0-9]+], [\&]))
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CXX
AC_PROG_CC
AC_CONFIG_FILES([
           Makefile
           examples/elfdump/Makefile
           examples/tutorial/Makefile
           examples/writer/Makefile
           examples/anonymizer/Makefile
           examples/write_obj/Makefile
           examples/add_section/Makefile
           examples/c_wrapper/Makefile
])
AC_OUTPUT
